--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "start": "node server.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write .",
-    "test": "vitest"
+    "test": "vitest",
+    "migrate": "node scripts/migrate-to-mongodb.js",
+    "css:compile": "node scripts/compile-css.js",
+    "css:watch": "npx sass --watch public/src/styles/main.scss:public/src/styles/main.css"
   },
   "keywords": [
     "author",
@@ -25,6 +28,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -33,6 +37,8 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.7"
   },
