Implement comprehensive routing system for Vercel deployment
- Added robust navigation handling with pushState API
- Implemented route change detection and handling
- Enhanced Header component with better navigation logic
- Added fallback routing for better browser compatibility
- Improved active link detection and state management

--- a/vercel.json
+++ b/vercel.json
@@ -23,10 +23,35 @@
     {
       "source": "/book/:id",
       "destination": "/book-detail.html"
+    }
+  ],
+  "redirects": [
+    {
+      "source": "/about/",
+      "destination": "/about",
+      "permanent": true
     },
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "source": "/books/",
+      "destination": "/books",
+      "permanent": true
+    },
+    {
+      "source": "/media/",
+      "destination": "/media",
+      "permanent": true
+    },
+    {
+      "source": "/contact/",
+      "destination": "/contact",
+      "permanent": true
+    },
+    {
+      "source": "/cms/",
+      "destination": "/cms",
+      "permanent": true
     }
-  ]
+  ],
+  "trailingSlash": false,
+  "cleanUrls": true
 }
