Add multiple routing configurations for Vercel deployment
- Simplified vercel.json with essential rewrites
- Added _redirects file as backup routing method
- Ensures compatibility across different hosting platforms
- Multiple fallback methods for route handling

--- a/vercel.json
+++ b/vercel.json
@@ -23,35 +23,10 @@
     {
       "source": "/book/:id",
       "destination": "/book-detail.html"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-  ],
-  "redirects": [
-    {
-      "source": "/about/",
-      "destination": "/about",
-      "permanent": true
-    },
-    {
-      "source": "/books/",
-      "destination": "/books",
-      "permanent": true
-    },
-    {
-      "source": "/media/",
-      "destination": "/media",
-      "permanent": true
-    },
-    {
-      "source": "/contact/",
-      "destination": "/contact",
-      "permanent": true
-    },
-    {
-      "source": "/cms/",
-      "destination": "/cms",
-      "permanent": true
-    }
-  ],
-  "trailingSlash": false,
-  "cleanUrls": true
+  ]
 }
