Fix Vercel function limit by consolidating all APIs into single main.js
- Consolidated all API endpoints (books, media, social, about, contact, test) into single main.js
- Removed individual API files to stay within 12-function Hobby plan limit
- Updated vercel.json to route all /api/* calls to /api/main
- Now only 2 serverless functions instead of 12+ individual ones
- This should resolve the deployment limit error and fix JSON parsing issues

--- a/vercel.json
+++ b/vercel.json
@@ -25,12 +25,16 @@
       "destination": "/book-detail.html"
     },
     {
+      "source": "/api/(.*)",
+      "destination": "/api/main"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
   "functions": {
-    "api/*.js": {
+    "api/main.js": {
       "maxDuration": 10
     }
   }
