Fix API endpoint detection by using query parameters instead of URL parsing
- Changed API to use query parameter 'endpoint' instead of parsing URL path
- Updated vercel.json to route each API endpoint with proper query parameters
- Added explicit routing for /api/books, /api/media, /api/social, etc.
- This should resolve the 'Endpoint not found' error and make API calls work properly

--- a/vercel.json
+++ b/vercel.json
@@ -25,8 +25,28 @@
       "destination": "/book-detail.html"
     },
     {
-      "source": "/api/(.*)",
-      "destination": "/api/main"
+      "source": "/api/books",
+      "destination": "/api/main?endpoint=books"
+    },
+    {
+      "source": "/api/media",
+      "destination": "/api/main?endpoint=media"
+    },
+    {
+      "source": "/api/social",
+      "destination": "/api/main?endpoint=social"
+    },
+    {
+      "source": "/api/about",
+      "destination": "/api/main?endpoint=about"
+    },
+    {
+      "source": "/api/contact",
+      "destination": "/api/main?endpoint=contact"
+    },
+    {
+      "source": "/api/test",
+      "destination": "/api/main?endpoint=test"
     },
     {
       "source": "/(.*)",
