Add simple test API endpoint for debugging without MongoDB dependency

--- a/vercel.json
+++ b/vercel.json
@@ -49,6 +49,10 @@
       "destination": "/api/main?endpoint=test"
     },
     {
+      "source": "/api/test-simple",
+      "destination": "/api/test-simple"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
