Add CMS API support for Vercel - Create dedicated CMS function and add CMS routes

--- a/vercel.json
+++ b/vercel.json
@@ -69,12 +69,19 @@
       "destination": "/api/main?endpoint=debug"
     },
     {
+      "source": "/api/cms/:path*",
+      "destination": "/api/cms"
+    },
+    {
       "source": "/api/test-simple",
       "destination": "/api/test-simple"
     }
   ],
   "functions": {
     "api/main.js": {
+      "maxDuration": 10
+    },
+    "api/cms.js": {
       "maxDuration": 10
     }
   },
