--- a/vercel.json
+++ b/vercel.json
@@ -1,106 +1,46 @@
 {
   "rewrites": [
-    {
-      "source": "/",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/about",
-      "destination": "/about.html"
-    },
-    {
-      "source": "/books",
-      "destination": "/books.html"
-    },
-    {
-      "source": "/media",
-      "destination": "/media.html"
-    },
-    {
-      "source": "/contact",
-      "destination": "/contact.html"
-    },
-    {
-      "source": "/cms",
-      "destination": "/cms/index.html"
-    },
-    {
-      "source": "/book/:id",
-      "destination": "/book-detail.html"
-    },
-    {
-      "source": "/api/books",
-      "destination": "/api/main?endpoint=books"
-    },
-    {
-      "source": "/api/books/latest",
-      "destination": "/api/main?endpoint=books&latest=true"
-    },
-    {
-      "source": "/api/books/:id",
-      "destination": "/api/main?endpoint=books&id=:id"
-    },
-    {
-      "source": "/api/books/category/:category",
-      "destination": "/api/main?endpoint=books&category=:category"
-    },
-    {
-      "source": "/api/media",
-      "destination": "/api/main?endpoint=media"
-    },
-    {
-      "source": "/api/social",
-      "destination": "/api/main?endpoint=social"
-    },
-    {
-      "source": "/api/about",
-      "destination": "/api/main?endpoint=about"
-    },
-    {
-      "source": "/api/contact",
-      "destination": "/api/main?endpoint=contact"
-    },
-    {
-      "source": "/api/test",
-      "destination": "/api/main?endpoint=test"
-    },
-    {
-      "source": "/api/debug",
-      "destination": "/api/main?endpoint=debug"
-    },
-    {
-      "source": "/api/cms/:path*",
-      "destination": "/api/cms"
-    },
-    {
-      "source": "/api/test-simple",
-      "destination": "/api/test-simple"
-    }
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/about", "destination": "/about.html" },
+    { "source": "/books", "destination": "/books.html" },
+    { "source": "/media", "destination": "/media.html" },
+    { "source": "/contact", "destination": "/contact.html" },
+    { "source": "/cms", "destination": "/cms/index.html" },
+    { "source": "/book/:id", "destination": "/book-detail.html" },
+    { "source": "/api/books", "destination": "/api/main?endpoint=books" },
+    { "source": "/api/books/latest", "destination": "/api/main?endpoint=books&latest=true" },
+    { "source": "/api/books/:id", "destination": "/api/main?endpoint=books&id=:id" },
+    { "source": "/api/books/category/:category", "destination": "/api/main?endpoint=books&category=:category" },
+    { "source": "/api/media", "destination": "/api/main?endpoint=media" },
+    { "source": "/api/social", "destination": "/api/main?endpoint=social" },
+    { "source": "/api/about", "destination": "/api/main?endpoint=about" },
+    { "source": "/api/contact", "destination": "/api/main?endpoint=contact" },
+    { "source": "/api/test", "destination": "/api/main?endpoint=test" },
+    { "source": "/api/debug", "destination": "/api/main?endpoint=debug" },
+    { "source": "/api/test-simple", "destination": "/api/test-simple" },
+    { "source": "/api/cms/auth/login", "destination": "/api/cms?endpoint=login" },
+    { "source": "/api/cms/auth/verify", "destination": "/api/cms?endpoint=verify" },
+    { "source": "/api/cms/dashboard", "destination": "/api/cms?endpoint=dashboard" },
+    { "source": "/api/cms/books", "destination": "/api/cms?endpoint=books" },
+    { "source": "/api/cms/media", "destination": "/api/cms?endpoint=media" },
+    { "source": "/api/cms/author", "destination": "/api/cms?endpoint=author" },
+    { "source": "/api/cms/social", "destination": "/api/cms?endpoint=social" },
+    { "source": "/api/cms/homepage-config", "destination": "/api/cms?endpoint=homepage-config" },
+    { "source": "/api/cms/settings", "destination": "/api/cms?endpoint=settings" },
+    { "source": "/api/cms/images", "destination": "/api/cms?endpoint=images" },
+    { "source": "/api/cms/:path*", "destination": "/api/cms" }
   ],
   "functions": {
-    "api/main.js": {
-      "maxDuration": 10
-    },
-    "api/cms.js": {
-      "maxDuration": 10
-    }
+    "api/main.js": { "maxDuration": 10 },
+    "api/cms.js": { "maxDuration": 10 }
   },
   "headers": [
     {
       "source": "/(.*)",
       "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        }
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "DENY" },
+        { "key": "X-XSS-Protection", "value": "1; mode=block" }
       ]
     }
   ]
