Fix CMS API database update issues - Fix ID extraction from query parameters, add ObjectId conversion for MongoDB operations, and update Vercel routing for individual item operations

--- a/vercel.json
+++ b/vercel.json
@@ -22,12 +22,15 @@
     { "source": "/api/cms/auth/verify", "destination": "/api/cms?endpoint=verify" },
     { "source": "/api/cms/dashboard", "destination": "/api/cms?endpoint=dashboard" },
     { "source": "/api/cms/books", "destination": "/api/cms?endpoint=books" },
+    { "source": "/api/cms/books/:id", "destination": "/api/cms?endpoint=books&id=:id" },
     { "source": "/api/cms/media", "destination": "/api/cms?endpoint=media" },
+    { "source": "/api/cms/media/:id", "destination": "/api/cms?endpoint=media&id=:id" },
     { "source": "/api/cms/author", "destination": "/api/cms?endpoint=author" },
     { "source": "/api/cms/social", "destination": "/api/cms?endpoint=social" },
     { "source": "/api/cms/homepage-config", "destination": "/api/cms?endpoint=homepage-config" },
     { "source": "/api/cms/settings", "destination": "/api/cms?endpoint=settings" },
     { "source": "/api/cms/images", "destination": "/api/cms?endpoint=images" },
+    { "source": "/api/cms/images/:id", "destination": "/api/cms?endpoint=images&id=:id" },
     { "source": "/api/cms/:path*", "destination": "/api/cms" }
   ],
   "functions": {
