--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongodb": "^6.18.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7"
   },
   "devDependencies": {
