Refactor CMS API routing and enhance homepage configuration handling
- Updated the Vercel configuration to include new API routes for books and media.
- Improved endpoint extraction logic in the CMS API to handle various paths more effectively.
- Added detailed logging for authentication checks and request handling in the homepage configuration.
- Removed the 'Clear Token' button from the CMS interface to streamline user experience.
- Cleaned up debugging code related to token management in the CMS JavaScript.

--- a/vercel.json
+++ b/vercel.json
@@ -27,8 +27,15 @@
     { "source": "/api/cms/media/:id", "destination": "/api/cms?endpoint=media&id=:id" },
     { "source": "/api/cms/author", "destination": "/api/cms?endpoint=author" },
     { "source": "/api/cms/social", "destination": "/api/cms?endpoint=social" },
-    { "source": "/api/cms/homepage-config", "destination": "/api/cms?endpoint=homepage-config" },
     { "source": "/api/cms/settings", "destination": "/api/cms?endpoint=settings" },
+    { "source": "/api/cms/homepage-config", "destination": "/api/cms?endpoint=homepage-config" },
+    { "source": "/api/cms/books/:id", "destination": "/api/cms?endpoint=books&id=:id" },
+    { "source": "/api/cms/books", "destination": "/api/cms?endpoint=books" },
+    { "source": "/api/cms/media/:id", "destination": "/api/cms?endpoint=media&id=:id" },
+    { "source": "/api/cms/media", "destination": "/api/cms?endpoint=media" },
+    { "source": "/api/cms/author", "destination": "/api/cms?endpoint=author" },
+    { "source": "/api/cms/social", "destination": "/api/cms?endpoint=social" },
+    { "source": "/api/cms/auth/:path*", "destination": "/api/cms?endpoint=:path*" },
     { "source": "/api/cms/:path*", "destination": "/api/cms" }
   ],
   "functions": {
