Add login test page and enhance CMS token management
- Introduced a new HTML page for testing CMS login functionality, including user input fields and result display.
- Updated Vercel configuration to route requests to the new login test page.
- Added a button in the CMS interface to clear stored tokens, improving user experience.
- Enhanced logging in the CMS JavaScript for better traceability during authentication processes.

--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,7 @@
     { "source": "/api/test", "destination": "/api/main?endpoint=test" },
     { "source": "/api/debug", "destination": "/api/main?endpoint=debug" },
     { "source": "/api/test-simple", "destination": "/api/test-simple" },
+    { "source": "/test-login", "destination": "/test-login.html" },
     { "source": "/api/cms/auth/login", "destination": "/api/cms?endpoint=login" },
     { "source": "/api/cms/auth/verify", "destination": "/api/cms?endpoint=verify" },
     { "source": "/api/cms/dashboard", "destination": "/api/cms?endpoint=dashboard" },
