Add meta tag deployment checklist and image accessibility testing script
- Created a comprehensive checklist for deploying meta tags, addressing issues such as missing Open Graph image dimensions, image type, alt text, and site name.
- Updated all HTML files in the `/public/` directory to include necessary Open Graph and Twitter card meta tags.
- Enhanced `vercel.json` with specific cache headers for image files.
- Introduced a new script `test-image-access.js` to verify image accessibility and meta tag extraction for improved deployment validation.

--- a/vercel.json
+++ b/vercel.json
@@ -45,6 +45,13 @@
         { "key": "X-Frame-Options", "value": "DENY" },
         { "key": "X-XSS-Protection", "value": "1; mode=block" }
       ]
+    },
+    {
+      "source": "/(.*\\.png|.*\\.jpg|.*\\.jpeg|.*\\.gif|.*\\.webp|.*\\.ico)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" }
+      ]
     }
   ]
 }
