Enhance CMS settings management and API integration
- Updated settings.json to include additional fields such as adminEmail, siteTitle, and siteDescription, along with a hashed password for security.
- Implemented asynchronous functions in cms.js for loading and saving settings, improving error handling and user feedback during the settings update process.
- Added a new test script to verify the functionality of settings management with MongoDB, ensuring all required fields are present and API endpoints are correctly configured.
- Refactored the settings form to clear password fields after submission for enhanced security.

--- a/backup/settings.json
+++ b/backup/settings.json
@@ -1,5 +1,9 @@
 {
+  "_id": "cms-settings",
   "username": "admin",
-  "password": "admin123",
-  "apiBaseUrl": "http://localhost:3001/api/cms"
+  "password": "$2b$12$LQv3c1yqBWVHxkd0LHAkCOYz6TtxMQJqhN8/LewdBPj4J/8KzqKqK",
+  "adminEmail": "admin@himanjali.com",
+  "siteTitle": "Himanjali Sankar - Author",
+  "siteDescription": "Official website of author Himanjali Sankar",
+  "updatedAt": "2024-01-15T00:00:00.000Z"
 } 
