Add comprehensive image optimization guide and implement image processing features
- Introduced a new `IMAGE_OPTIMIZATION_GUIDE.md` detailing the image optimization strategies for the Himanjali Sankar author website, including lazy loading, Cloudinary integration, and modern image formats.
- Added image optimization middleware in `server.js` using the Sharp library for on-the-fly image processing.
- Implemented batch image optimization script in `scripts/optimize-images.js` for local images, generating WebP and JPEG formats.
- Enhanced image handling in the frontend by integrating Cloudinary for optimized image URLs in `cloudinary-config.js`.
- Updated various components to utilize optimized images and lazy loading techniques, improving overall performance and user experience.
- Added performance monitoring utilities to track image loading metrics and Core Web Vitals in `performance-monitor.js`.
- Created a test HTML file for validating Cloudinary image optimization features and performance metrics.
- Updated package dependencies to include Sharp for image processing capabilities.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "vitest",
     "migrate": "node scripts/migrate-to-mongodb.js",
     "css:compile": "node scripts/compile-css.js",
-    "css:watch": "npx sass --watch public/src/styles/main.scss:public/src/styles/main.css"
+    "css:watch": "npx sass --watch public/src/styles/main.scss:public/src/styles/main.css",
+    "optimize:images": "node scripts/optimize-images.js"
   },
   "keywords": [
     "author",
@@ -42,7 +43,8 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^7.1.0",
