--- a/env.example
+++ b/env.example
@@ -7,6 +7,18 @@ MONGODB_OPTIONS_MAX_POOL_SIZE=10
 MONGODB_OPTIONS_SERVER_SELECTION_TIMEOUT_MS=5000
 MONGODB_OPTIONS_SOCKET_TIMEOUT_MS=45000
 
+# Email Configuration (for contact form)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+# Alternative email variables (if not using SMTP_ prefix)
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
+
+# Admin email for receiving contact form messages
+ADMIN_EMAIL=himanjali.sankar@gmail.com
+
 # Environment
 NODE_ENV=production
 
