--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,8 @@
     { "source": "/books", "destination": "/books.html" },
     { "source": "/media", "destination": "/media.html" },
     { "source": "/contact", "destination": "/contact.html" },
+    { "source": "/sitemap.xml", "destination": "/api/sitemap" },
+    { "source": "/robots.txt", "destination": "/api/robots" },
     { "source": "/cms", "destination": "/cms/index.html" },
     { "source": "/book/:id", "destination": "/book-detail.html" },
     { "source": "/api/books", "destination": "/api/main?endpoint=books" },
@@ -35,7 +37,9 @@
   ],
   "functions": {
     "api/main.js": { "maxDuration": 10 },
-    "api/cms.js": { "maxDuration": 10 }
+    "api/cms.js": { "maxDuration": 10 },
+    "api/sitemap.js": { "maxDuration": 5 },
+    "api/robots.js": { "maxDuration": 5 }
   },
   "headers": [
     {
@@ -51,6 +55,20 @@
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
         { "key": "Access-Control-Allow-Origin", "value": "*" }
+      ]
+    },
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        { "key": "Content-Type", "value": "application/xml" },
+        { "key": "Cache-Control", "value": "public, max-age=3600" }
+      ]
+    },
+    {
+      "source": "/robots.txt",
+      "headers": [
+        { "key": "Content-Type", "value": "text/plain" },
+        { "key": "Cache-Control", "value": "public, max-age=3600" }
       ]
     }
   ]
