Add social sharing image functionality and update meta tags
- Implemented a dynamic API endpoint to serve the author image, resolving previous 404 errors for social media platforms.
- Updated Vercel configuration to include a rewrite rule for the new image endpoint and adjusted function settings.
- Modified meta tags across multiple HTML files to reference the new image URL, enhancing social sharing capabilities.
- Created documentation detailing the changes and next steps for deployment and testing.

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,7 @@
     { "source": "/contact", "destination": "/contact.html" },
     { "source": "/sitemap.xml", "destination": "/api/sitemap" },
     { "source": "/robots.txt", "destination": "/api/robots" },
+    { "source": "/social-image.png", "destination": "/api/social-image" },
     { "source": "/cms", "destination": "/cms/index.html" },
     { "source": "/book/:id", "destination": "/book-detail.html" },
     { "source": "/api/books", "destination": "/api/main?endpoint=books" },
@@ -39,7 +40,8 @@
     "api/main.js": { "maxDuration": 10 },
     "api/cms.js": { "maxDuration": 10 },
     "api/sitemap.js": { "maxDuration": 5 },
-    "api/robots.js": { "maxDuration": 5 }
+    "api/robots.js": { "maxDuration": 5 },
+    "api/social-image.js": { "maxDuration": 10 }
   },
   "headers": [
     {
