--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,7 @@
     { "source": "/book/:id", "destination": "/book-detail.html" },
     { "source": "/api/books", "destination": "/api/main?endpoint=books" },
     { "source": "/api/books/latest", "destination": "/api/main?endpoint=books&latest=true" },
+    { "source": "/api/books/second-featured", "destination": "/api/main?endpoint=books&second-featured=true" },
     { "source": "/api/books/:id", "destination": "/api/main?endpoint=books&id=:id" },
     { "source": "/api/books/category/:category", "destination": "/api/main?endpoint=books&category=:category" },
     { "source": "/api/media", "destination": "/api/main?endpoint=media" },
