--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7",
+    "puppeteer": "^24.17.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
